--- a/react-frontend/src/frontpage-styles.module.css
+++ b/react-frontend/src/frontpage-styles.module.css
@@ -114,13 +114,13 @@ form {
   margin-left: 20px;
 }
 
-label {
+.formLabel {
   font-size: 18px;
   margin: 10px 0 0;
   color: black;
 }
 
-input {
+.inputField {
   padding: 10px;
   font-size: 16px;
   border-radius: 5px;
@@ -128,6 +128,8 @@ input {
   background-color: white;
   border: 1px solid black;
   color: black;
+  margin: 0px;
+  width: 300px !important;
 }
 
 /* Submit button */
@@ -389,5 +391,9 @@ p {
   background-color: white;
   border: black, 4px, solid;
   border-radius: 2px;
+  color: black;
+}
+
+.settingsContainer p {
   color: black;
 }
